--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -103,15 +103,6 @@ h4 {
 	height: 40px;
 }
 
-/* -----------------------------------------
-   Page Name 1
------------------------------------------ */
 
-
-
-
-/* -----------------------------------------
-   Page Name 2
------------------------------------------ */
-
-
+/* Fix for accordion color */
+ul.accordion > li.active { border-top: 3px solid #70B3FF; }
