--- a/stylesheets/skeleton.css
+++ b/stylesheets/skeleton.css
@@ -76,7 +76,7 @@
 
     /* Note: Design for a width of 768px */
 
-    /*@media only screen and (min-width: 768px) and (max-width: 959px) {
+    @media only screen and (min-width: 768px) and (max-width: 959px) {
         .container                                  { width: 768px; }
         .container .column,
         .container .columns                         { margin-left: 10px; margin-right: 10px;  }
@@ -121,14 +121,13 @@
         .container .offset-by-fourteen              { padding-left: 672px; }
         .container .offset-by-fifteen               { padding-left: 720px; }
     }
-*/
 
 /*  #Mobile (Portrait)
 ================================================== */
 
     /* Note: Design for a width of 320px */
 
-/*    @media only screen and (max-width: 767px) {
+    @media only screen and (max-width: 767px) {
         .container { width: 300px; }
         .container .columns,
         .container .column { margin: 0; }
@@ -168,15 +167,14 @@
         .container .offset-by-thirteen,
         .container .offset-by-fourteen,
         .container .offset-by-fifteen { padding-left: 0; }
-
-    }*/
+    }
 
 /* #Mobile (Landscape)
 ================================================== */
 
     /* Note: Design for a width of 480px */
 
-/*    @media only screen and (min-width: 480px) and (max-width: 767px) {
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
         .container { width: 420px; }
         .container .columns,
         .container .column { margin: 0; }
@@ -201,7 +199,6 @@
         .container .one-third.column,
         .container .two-thirds.column { width: 420px; }
     }
-*/
 
 /* #Clearing
 ================================================== */
