--- a/test/stylesheets/layout.css
+++ b/test/stylesheets/layout.css
@@ -6,13 +6,33 @@ body {
 	color: #444;
 }
 
+/* #Links
+================================================== */
+a, a:visited { color: #333; text-decoration: underline; outline: 0; }
+a:hover, a:focus { color: #000; }
+p a, p a:visited { line-height: inherit; }
+
+/* #Styles
+================================================== */
+.container-narrow {
+	margin: 0 auto;
+	max-width: 700px;
+}
+.container-narrow > hr {
+	margin: 30px 0;
+}
+
 .pagetitle {
+	margin: 60px auto;
+	text-align: justify;
 	word-wrap: break-word; 
 	width: 270px;
 	font-size: 80px;
-	text-align: justify;
-	margin: 30px auto;
 	line-height: 75%;
+}
+
+.pagetitle > hr {
+	margin: 30px 0;
 }
 
 .pagemenu {
